syntax = "proto3";

package accounts;

message Account {
    string addr = 1;
    string frozen = 2;
    string  balance = 3;
}

message MinerAccount {
    string addr = 1;
    string total = 2;
    string increase = 3;
}
message Accounts {
	repeated Account accounts = 1;

}

message MinerAccounts {
    repeated MinerAccount minerAccounts = 1;
    int64 seconds = 2;
    string totalIncrease = 3;
}


message Config {
	repeated string whitelist = 1;
	string jrpcBindAddr = 2;
	string dataDir = 3;
	repeated string minerAddr = 4;
}

