syntax = "proto3";
package types;

message Norm {
    bytes  normId     = 1;
    int64  createTime = 2;
    string key        = 3;
    bytes  value      = 4;
}

message NormAction {
    oneof value {
        NormPut nput = 1;
    }
    int32 ty = 5;
}

message NormPut {
    string key   = 1;
    bytes  value = 2;
}

message NormGetKey {
	string key = 1;
}